# barhana

./: .gitignore  README.md  pyproject.toml  rules.py  status.sh
DOC/: index.md
deriv/: 1-modus-pollens.py  1-modus-tollens.py  2-mc-contrapos.py  2-mc-import.py  2-mc-trans.py  3-mc-neg-cond.py  mc00_excluded_mid.py  mc00_reflex.py  mc00_totality.py  mc01_contrapos.py  mc02_import.py  mc03_vacuous.py  mc04_neg.py  mc05_or.py  mc06_commut.py  mc07_dist.py  mc08_strength.py  mc09_trans.py  mc10_sda.py  modus_pollens.py  modus_tollens.py
fallacies/: mc_affirm.py  mc_deny.py
graphs/: doerr_levasseur.txt  hurley.txt  terence.txt
prepos/: conj_add.py  conj_annul.py  conj_assoc.py  conj_commut.py  conj_comp.py  conj_dist.py  conj_identity.py  conj_neg.py  conj_unconj.py  conj_vacuous.py  demorgans.py  disj_assoc.py  disj_commut.py  disj_comp.py  disj_dist.py  disj_identity.py  disj_neg.py  disj_syllo.py  dneg.py  identity.py  involution.py  mc-dist.py  mc-transpose.py  mc_absurdum.py  mc_annul.py  mc_commut.py  mc_contrapos.py  mc_dist.py  mc_equiv.py  mc_excluded_mid.py  mc_export.py  mc_identity.py  mc_impl.py  mc_import.py  mc_modp.py  mc_neg.py  mc_peirce.py  mc_reduct.py  mc_reflex.py  mc_sda.py  (+23 more)
tests/: p0_identity.py  prepos  theorems
theorems/: cons_dilemma.py  dest_dilemma.py  mc_and_dist.py  t10.py  t5_syllogism.py  t7-distributitive.py  t8-commutation.py  t9-reduction.py
tui/: barhana-cli  barhana-tui
