[project]
name = "Barhana"
version = "1.0"
description = "A logic derivation engine"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["logic", "symbolic", "math"]
authors = [
  {name = "Mustafa Alelg", email = "me@mstfelg.com" }
]
maintainers = [
  {name = "Mustafa Alelg", email = "me@mstfelg.com" }
]

[project.urls]
"Homepage" = "https://github.com/mstfelg/barhana"
"Bug Reports" = "https://github.com/mstfelg/barhana/issues"
"Funding" = "https://donate.pypi.org"
"Source" = "https://github.com/mstfelg/barhana/"
